@@ -36,10 +36,35 @@ import java.util.*;
 */
 public class StdSkill extends StdAbility
 {
-	@Override public String ID() { return "StdSkill"; }
-	private final static String localizedName = CMLib.lang().L("StdSkill");
-	@Override public String name() { return localizedName; }
-	@Override public int classificationCode(){return Ability.ACODE_SKILL;}
-	@Override protected int canAffectCode(){return 0;}
-	@Override protected int canTargetCode(){return CAN_MOBS;}
+	@Override
+	public String ID()
+	{
+		return "StdSkill";
+	}
+
+	private final static String	localizedName	= CMLib.lang().L("StdSkill");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_SKILL;
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return 0;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return CAN_MOBS;
+	}
 }
